Changed colors for ChartJsCoin to work with dark/light modes; Updated dark mode background to Dark Grey; fixed missing key error for Currency component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,9 +29,17 @@ body {
     --text-secondary: royalblue;
     --accent: purple;
   }
+  /* set colors for dark mode theme */
   [data-theme='dark'] {
-    --background: black;
+    --background: #121212;
     --text-primary: white;
     --text-secondary: grey;
     --accent: darkred;
   }
+  /* optional -> set colors for light mode theme */
+  /* [data-theme='light'] {
+    --background: ghostwhite;
+    --text-primary: black;
+    --text-secondary: red;
+    --accent: orange;
+  } */
